--- a/source/2014-03-20-leap-year.html.markdown
+++ b/source/2014-03-20-leap-year.html.markdown
@@ -1,7 +1,7 @@
 ---
 title: Leap year algorithm in ruby
 date: 2014-03-20 23:54 UTC
-tags:
+tags: Ruby on Rails
 ---
 
 I underestimated this algorithm and learned my lesson -- Ask for help sooner!
